--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rm -rf dist",
     "build": "npm run clean && babel src --presets babel-preset-stage-2 --out-dir dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./test/index.js"
   },
   "repository": {
     "type": "git",
@@ -31,6 +31,8 @@
     "babel-register": "^6.24.1",
     "chai": "^4.0.1",
     "esdoc": "^0.5.2",
-    "eslint": "^3.19.0"
+    "eslint": "^3.19.0",
+    "mocha": "^5.0.5",
+    "socket.io-client": "^2.1.0"
   }
 }
