--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "sockback",
   "version": "1.0.7",
   "description": "Advenced framework for socknet",
-  "main": "dist/index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "clean": "rm -rf dist",
-    "build": "npm run clean && babel src --presets babel-preset-stage-2 --out-dir dist",
     "test": "mocha ./test/index.js"
   },
   "repository": {
