--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/leon3s/sockback#readme",
   "dependencies": {
+    "debug": "^3.1.0",
     "loopback": "^3.13.0",
     "loopback-boot": "^2.26.2",
     "socknet": "^1.0.24"
